--- a/Data Analyis.Rmd
+++ b/Data Analyis.Rmd
@@ -3,7 +3,7 @@ title: "Sales Analysis"
 output: html_document
 ---
 ```{r}
-install.packages("ggmap")
+
 ```
 
 ```{r setup, include=FALSE}
@@ -33,30 +33,32 @@ cleansales<-sales%>%
   filter(saleprice<9000000)
 cleansales
 ```
-
-A quick and nonhelpful chart
-```{r}
-cleansales%>%
-  group_by(date)%>%
-  summarize(median_price=median(saleprice))%>%
-  left_join(CPI, by= date)
-  #ggplot()+geom_point(mapping=aes(x=date , y=median_price))
-```
-
 Reading in Consumer Price Index Data
 U.S. Bureau of Labor Statistics, Consumer Price Index for All Urban Consumers: All Items [CPIAUCSL], retrieved from FRED, Federal Reserve Bank of St. Louis; https://fred.stlouisfed.org/series/CPIAUCSL, October 25, 2018.
 
 Price index in September 2018 is 251.994
 ```{r}
 CPI<-read.csv("CPIAUCSL.csv")
-CPI%>%
-  mutate
+CPI<-CPI%>%
+  rowwise()%>%
+  mutate(date=as.Date(DATE))%>%
+  select(CPIAUCSL, date)
 ```
 
-Converting sales to June 2018 dollars
+
+Converting to present dollars and converting
 ```{r}
-
+cleansales%>%
+  filter(saleprice<1000000)%>%
+  group_by(date)%>%
+  summarize(median_price=median(saleprice))%>%
+  left_join(CPI)%>%
+  rowwise()%>%
+  mutate(present_dollars=median_price*251.994/CPIAUCSL)%>%
+  ggplot()+geom_point(mapping=aes(x=date , y=present_dollars))
 ```
+
+
 
 Getting Lat/long for each street address
 ```{r}
